First beta is running

--- a/app/index.html
+++ b/app/index.html
@@ -97,6 +97,7 @@
         <script src="scripts/services/dnaviewerservice.js"></script>
         <script src="scripts/controllers/404.js"></script>
         <script src="scripts/controllers/about.js"></script>
+        <script src="scripts/directives/dnaviewerdirective.js"></script>
         <!-- endbuild -->
 </body>
 </html>
